[tool.poetry]
name = "new-pizza-bot"
version = "0.1.0"
description = "Pizza shop"
authors = ["Igor <Aleshichev.git@email.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
